# loro-dart

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  LICENSE  PUBLISHING.md  QUICKSTART.md  README.md  analysis_options.yaml  build_all_platforms.sh  build_platforms.ps1  flutter_rust_bridge.yaml  pubspec.yaml
.claude/: settings.local.json
.github/workflows/: multi_platform_build.yml
.trae/documents/: Flutter Loro库封装实现计划.md  plan_20251206_213529.md  plan_20251206_214818.md  plan_20251206_220842.md
doc/api/: __404error.html  index.html  index.json  search.html
doc/api/flutter_loro_ffi/: LoroBytesFreeFunc.html  LoroDisposeException-class-sidebar.html  LoroDisposeException-class.html  LoroDoc-class-sidebar.html  LoroDoc-class.html  LoroDocCommitFunc.html  LoroDocDeleteTextFunc.html  LoroDocException-class-sidebar.html  LoroDocException-class.html  LoroDocExportAllUpdatesFunc.html  LoroDocFreeFunc.html  LoroDocGetPeerIdFunc.html  LoroDocGetTextFunc.html  LoroDocImportFunc.html  LoroDocInsertTextFunc.html  LoroDocNewFunc.html  LoroDocPointer.html  LoroDocSetPeerIdFunc.html  LoroException-class-sidebar.html  LoroException-class.html  LoroStatus-enum-sidebar.html  LoroStatus.html  LoroStringFreeFunc.html  LoroSyncException-class-sidebar.html  LoroSyncException-class.html  LoroTextException-class-sidebar.html  LoroTextException-class.html  flutter_loro_ffi-library-sidebar.html  flutter_loro_ffi-library.html  index.html  loroBytesFree.html  loroDocCommit.html  loroDocDeleteText.html  loroDocExportAllUpdates.html  loroDocFree.html  loroDocGetPeerId.html  loroDocGetText.html  loroDocImport.html  loroDocInsertText.html  loroDocNew.html  (+3 more)
doc/api/flutter_loro_ffi/LoroDisposeException/: LoroDisposeException.html
doc/api/flutter_loro_ffi/LoroDoc/: LoroDoc.fromPointer.html  LoroDoc.html  commit.html  deleteText.html  dispose.html  exportAllUpdates.html  finalize.html  getPeerId.html  getText.html  import.html  insertText.html  setPeerId.html
doc/api/flutter_loro_ffi/LoroDocException/: LoroDocException.html
doc/api/flutter_loro_ffi/LoroException/: LoroException.html  cause.html  code.html  message.html  toString.html
doc/api/loro_dart/: LoroBytesFreeFunc.html  LoroDisposeException-class-sidebar.html  LoroDisposeException-class.html  LoroDoc-class-sidebar.html  LoroDoc-class.html  LoroDocCommitFunc.html  LoroDocDeleteTextFunc.html  LoroDocException-class-sidebar.html  LoroDocException-class.html  LoroDocExportAllUpdatesFunc.html  LoroDocFreeFunc.html  LoroDocGetPeerIdFunc.html  LoroDocGetTextFunc.html  LoroDocImportFunc.html  LoroDocInsertTextFunc.html  LoroDocListDeleteFunc.html  LoroDocListGetFunc.html  LoroDocListInsertFunc.html  LoroDocListPushFunc.html  LoroDocListSizeFunc.html  LoroDocMapDeleteFunc.html  LoroDocMapGetFunc.html  LoroDocMapInsertFunc.html  LoroDocMapSizeFunc.html  LoroDocNewFunc.html  LoroDocPointer.html  LoroDocSetPeerIdFunc.html  LoroException-class-sidebar.html  LoroException-class.html  LoroStatus-enum-sidebar.html  LoroStatus.html  LoroStringFreeFunc.html  LoroSyncException-class-sidebar.html  LoroSyncException-class.html  LoroTextException-class-sidebar.html  LoroTextException-class.html  index.html  loroBytesFree.html  loroDocCommit.html  loroDocDeleteText.html  (+21 more)
doc/api/loro_ffi/: index.html  loro_ffi-library-sidebar.html  loro_ffi-library.html
doc/docs/: decentralized-function-process.md  validation_plan.md
docs/: development.md  usage_guide.md
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
include/: loro_ffi.h
ios/: LoroFFI.podspec
lib/: flutter_loro_ffi.dart  loro_dart.dart  loro_ffi.dart
lib/src/: api.dart  bindings.dart  ffi_loader.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  loro_doc.dart  loro_exception.dart
native/rust/: Cargo.toml  build.rs  cbindgen.toml
native/rust/include/: loro_ffi.h
native/rust/src/: lib.rs
rust/: Cargo.toml  build.rs
rust/src/: api.rs  frb_generated.rs  lib.rs
scripts/: build_all.sh  build_android.ps1  build_dart.ps1  build_linux.ps1  build_windows.bat  build_windows.ps1
test/: benchmark_test.dart  boundary_test.dart  integration_test.dart  loro_dart_test.dart  loro_doc_test.dart  optimization_test.dart
tool/: build.dart  build_all_platforms.dart  build_on_linux.dart  build_on_mac.dart  build_on_windows.dart  generate_bindings.dart  generate_bindings_frb.dart
windows/: CMakeLists.txt  loro_dart_plugin.cpp  loro_dart_plugin.h  loro_ffi.cpp
(+43 files in other folders)
